k8s/base-cluster/keycloak/manifests/keycloak.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels: &labels
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: webserver
spec:
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      priorityClassName: sharedsrv-high-priority

      volumes:
        - name: secrets
          secret:
            secretName: keycloak

      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak
          imagePullPolicy: Always
          args: [ start, --auto-build ]
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: secrets
              mountPath: "/opt/jboss/secrets"
          readinessProbe:
            httpGet:
              port: http
              path: /health/ready
