k8s/base-cluster/keycloak/manifests/keycloak.service.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels: &labels
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: webserver
spec:
  selector: *labels
  ipFamilies:
    - IPv6
  ports:
    - name: http
      port: 8080
      targetPort: http
